--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "axios": "^1.6.7",
+    "material-design-icons-iconfont": "^6.7.0",
     "vue": "^3.4.19",
     "vue-router": "4",
     "vuetify": "^3.5.8"
